1.0
  - Windows and MacOS now ship with libgit2-1.0.0
  - Do not advertise HTTPS support in startup message because it should
    always be supported.


0.3
  - Support for clone --mirror and push --mirror (#12)

0.2
  - git_open() now searches parent directories for .git repository
  - git_push() sets upstream if unset
  - workaround for ASAN problem in libssh2
  - lots of tweaks and bug fixes

0.1
  - Initial CRAN release.